--- a/backend/.env
+++ b/backend/.env
@@ -6,9 +6,9 @@ TYPEORM_DATABASE = postgres
 TYPEORM_PORT = 5432
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = true
-TYPEORM_ENTITIES = ./**/*.entity.js
+TYPEORM_ENTITIES = ./src/**/*.entity.ts,./dist/src/**/*.entity.js
 TYPEORM_DRIVER_EXTRA = {"ssl":false}
-TYPEORM_MIGRATIONS=migration/*.(ts|js)
+TYPEORM_MIGRATIONS=migration/*.{ts,js}
 TYPEORM_MIGRATIONS_DIR=migration
 PASSWORD_HASH=thisisaverylonghash
 JWT_SECRET=thisisaverylongsecret
